# post-selector

./: .gitignore  README.md  USAGE.md  pyproject.toml
data/: nbcc_c2_climatic_data.csv
docs/plans/: 2026-03-31-codebase-improvements.md
post_selector/: __init__.py  app.py  cli.py  core.py
tests/: conftest.py  test_city.py  test_post.py  test_snow.py  test_wind.py
