[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post-selector"
version = "1.0.0"
description = "Laminated Timber Post Capacity Calculator per NBCC-2010 and CSA O86-09"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hillier Manufacturing Inc."}
]
keywords = ["structural", "engineering", "timber", "post", "NBCC", "CSA O86"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
web = ["streamlit>=1.28.0"]

[project.scripts]
post-selector = "post_selector.cli:main"
post-selector-web = "streamlit:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["post_selector"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]